--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "standard",
-    "standard-react",
-    "plugin:prettier/recommended",
-    "prettier/standard",
-    "prettier/react"
-  ],
+  "extends": "react-app",
   "env": {
     "node": true
   },
