--- a/package.json
+++ b/package.json
@@ -29,20 +29,16 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
@@ -51,6 +47,14 @@
     "dist"
   ],
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "chroma-js": "^2.1.1",
+    "dompurify": "^2.2.7",
+    "eslint": "^6.8.0",
+    "framer-motion": "^4.1.2",
+    "react-color": "^2.19.3",
+    "react-select": "^4.3.0",
+    "styled-components": "^5.2.3",
     "zyppd-bits": "^1.0.1"
   }
 }
