--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint-config-standard": "^14.1.0",
@@ -39,9 +40,11 @@
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.39",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "files": [
     "dist"
